--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  adaptive_theme: ^1.1.0
   animations: ^1.1.2
   auto_size_text: ^2.1.0
   bubble: ^1.1.9+1
@@ -50,6 +51,7 @@ dependencies:
   provider: ^4.3.2+2
   random_color: ^1.0.5
   sentiment_dart: ^0.0.4
+  shared_preferences: ^0.5.12+4
   speech_to_text: ^3.0.1
   url_launcher: ^5.5.3
   
