--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^0.5.2+1
   fluttericon: ^1.0.7
   flutter_linkify: ^4.0.2
+  flutter_slidable: ^0.5.7
   flutter_spinkit: ^4.1.2+1
   flutter_svg: ^0.19.0
   fluttertoast: ^7.1.1
